assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list_comma_seperated ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID ':' TYPEID ';'
   11        | OBJECTID ':' TYPEID ASSIGN expression ';'
   12        | error ';'

   13 formal_list_comma_seperated: %empty
   14                            | formal
   15                            | formal_list_comma_seperated ',' formal

   16 formal: OBJECTID ':' TYPEID
   17       | error ')'

   18 expression_list_comma_seperated: %empty
   19                                | expression
   20                                | expression_list_comma_seperated ',' expression

   21 expression_list: expression ';'
   22                | expression_list expression ';'
   23                | error ';'

   24 expression: OBJECTID ASSIGN expression
   25           | expression '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   27           | OBJECTID '(' expression_list_comma_seperated ')'
   28           | IF expression THEN expression ELSE expression FI
   29           | WHILE expression LOOP expression POOL
   30           | '{' expression_list '}'
   31           | LET let_expression
   32           | CASE expression OF case_list ESAC
   33           | NEW TYPEID
   34           | ISVOID expression
   35           | expression '+' expression
   36           | expression '-' expression
   37           | expression '*' expression
   38           | expression '/' expression
   39           | '~' expression
   40           | expression '<' expression
   41           | expression LE expression
   42           | expression '=' expression
   43           | NOT expression
   44           | '(' expression ')'
   45           | OBJECTID
   46           | INT_CONST
   47           | STR_CONST
   48           | BOOL_CONST

   49 let_expression: single_let_construct
   50               | multiple_let_constructs

   51 single_let_construct: OBJECTID ':' TYPEID let_assignment IN expression
   52                     | error IN

   53 multiple_let_constructs: OBJECTID ':' TYPEID let_assignment ',' let_expression
   54                        | error ','

   55 let_assignment: %empty
   56               | ASSIGN expression

   57 case_list: case ';'
   58          | case_list case ';'

   59 case: OBJECTID ':' TYPEID DARROW expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 25 26 27 44
')' (41) 9 17 25 26 27 44
'*' (42) 37
'+' (43) 35
',' (44) 15 20 53 54
'-' (45) 36
'.' (46) 25 26
'/' (47) 38
':' (58) 9 10 11 16 51 53 59
';' (59) 4 5 6 9 10 11 12 21 22 23 57 58
'<' (60) 40
'=' (61) 42
'@' (64) 26
'{' (123) 4 5 9 30
'}' (125) 4 5 9 30
'~' (126) 39
error (256) 6 12 17 23 52 54
CLASS (258) 4 5
ELSE (259) 28
FI (260) 28
IF (261) 28
IN (262) 51 52
INHERITS (263) 5
LET (264) 31
LOOP (265) 29
POOL (266) 29
THEN (267) 28
WHILE (268) 29
CASE (269) 32
ESAC (270) 32
OF (271) 32
DARROW (272) 59
NEW (273) 33
ISVOID (274) 34
STR_CONST (275) 47
INT_CONST (276) 46
BOOL_CONST (277) 48
TYPEID (278) 4 5 9 10 11 16 26 33 51 53 59
OBJECTID (279) 9 10 11 16 24 25 26 27 45 51 53 59
ASSIGN (280) 11 24 56
NOT (281) 43
LE (282) 41
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11 12, on right: 8
formal_list_comma_seperated (51)
    on left: 13 14 15, on right: 9 15
formal (52)
    on left: 16 17, on right: 14 15
expression_list_comma_seperated (53)
    on left: 18 19 20, on right: 20 25 26 27
expression_list (54)
    on left: 21 22 23, on right: 22 30
expression (55)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48, on right: 9 11 19 20 21 22 24 25 26 28 29
    32 34 35 36 37 38 39 40 41 42 43 44 51 56 59
let_expression (56)
    on left: 49 50, on right: 31 53
single_let_construct (57)
    on left: 51 52, on right: 49
multiple_let_constructs (58)
    on left: 53 54, on right: 50
let_assignment (59)
    on left: 55 56, on right: 51 53
case_list (60)
    on left: 57 58, on right: 32 58
case (61)
    on left: 59, on right: 57 58


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   12 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . '(' formal_list_comma_seperated ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID . ':' TYPEID ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   12 feature: error ';' .

    $default  reduce using rule 12 (feature)


State 21

    9 feature: OBJECTID '(' . formal_list_comma_seperated ')' ':' TYPEID '{' expression '}' ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    ')'  reduce using rule 13 (formal_list_comma_seperated)
    ','  reduce using rule 13 (formal_list_comma_seperated)

    formal_list_comma_seperated  go to state 27
    formal                       go to state 28


State 22

   10 feature: OBJECTID ':' . TYPEID ';'
   11        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   17 formal: error . ')'

    ')'  shift, and go to state 31


State 26

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

    9 feature: OBJECTID '(' formal_list_comma_seperated . ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list_comma_seperated: formal_list_comma_seperated . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   14 formal_list_comma_seperated: formal .

    $default  reduce using rule 14 (formal_list_comma_seperated)


State 29

   10 feature: OBJECTID ':' TYPEID . ';'
   11        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   17 formal: error ')' .

    $default  reduce using rule 17 (formal)


State 32

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 33

    9 feature: OBJECTID '(' formal_list_comma_seperated ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 38


State 34

   15 formal_list_comma_seperated: formal_list_comma_seperated ',' . formal

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    formal  go to state 39


State 35

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 54


State 36

   10 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 10 (feature)


State 37

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 38

    9 feature: OBJECTID '(' formal_list_comma_seperated ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 55


State 39

   15 formal_list_comma_seperated: formal_list_comma_seperated ',' formal .

    $default  reduce using rule 15 (formal_list_comma_seperated)


State 40

   28 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 56


State 41

   31 expression: LET . let_expression

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let_expression           go to state 59
    single_let_construct     go to state 60
    multiple_let_constructs  go to state 61


State 42

   29 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 62


State 43

   32 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 63


State 44

   33 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 45

   34 expression: ISVOID . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 65


State 46

   47 expression: STR_CONST .

    $default  reduce using rule 47 (expression)


State 47

   46 expression: INT_CONST .

    $default  reduce using rule 46 (expression)


State 48

   48 expression: BOOL_CONST .

    $default  reduce using rule 48 (expression)


State 49

   24 expression: OBJECTID . ASSIGN expression
   27           | OBJECTID . '(' expression_list_comma_seperated ')'
   45           | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 45 (expression)


State 50

   43 expression: NOT . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 68


State 51

   39 expression: '~' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 69


State 52

   30 expression: '{' . expression_list '}'

    error       shift, and go to state 70
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression_list  go to state 71
    expression       go to state 72


State 53

   44 expression: '(' . expression ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 73


State 54

   11 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 55

    9 feature: OBJECTID '(' formal_list_comma_seperated ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 84


State 56

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   28           | IF expression . THEN expression ELSE expression FI
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    THEN  shift, and go to state 85
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 57

   52 single_let_construct: error . IN
   54 multiple_let_constructs: error . ','

    IN   shift, and go to state 86
    ','  shift, and go to state 87


State 58

   51 single_let_construct: OBJECTID . ':' TYPEID let_assignment IN expression
   53 multiple_let_constructs: OBJECTID . ':' TYPEID let_assignment ',' let_expression

    ':'  shift, and go to state 88


State 59

   31 expression: LET let_expression .

    $default  reduce using rule 31 (expression)


State 60

   49 let_expression: single_let_construct .

    $default  reduce using rule 49 (let_expression)


State 61

   50 let_expression: multiple_let_constructs .

    $default  reduce using rule 50 (let_expression)


State 62

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   29           | WHILE expression . LOOP expression POOL
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   32           | CASE expression . OF case_list ESAC
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   33 expression: NEW TYPEID .

    $default  reduce using rule 33 (expression)


State 65

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   34           | ISVOID expression .
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 34 (expression)


State 66

   24 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 91


State 67

   27 expression: OBJECTID '(' . expression_list_comma_seperated ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 18 (expression_list_comma_seperated)

    expression_list_comma_seperated  go to state 92
    expression                       go to state 93


State 68

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression
   43           | NOT expression .

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 43 (expression)


State 69

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   39           | '~' expression .
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 39 (expression)


State 70

   23 expression_list: error . ';'

    ';'  shift, and go to state 94


State 71

   22 expression_list: expression_list . expression ';'
   30 expression: '{' expression_list . '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 95
    '('         shift, and go to state 53

    expression  go to state 96


State 72

   21 expression_list: expression . ';'
   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 97


State 73

   25 expression: expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression
   44           | '(' expression . ')'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ')'  shift, and go to state 98


State 74

   41 expression: expression LE . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 99


State 75

   40 expression: expression '<' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 100


State 76

   42 expression: expression '=' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 101


State 77

   35 expression: expression '+' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 102


State 78

   36 expression: expression '-' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 103


State 79

   37 expression: expression '*' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 104


State 80

   38 expression: expression '/' . expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 105


State 81

   26 expression: expression '@' . TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'

    TYPEID  shift, and go to state 106


State 82

   25 expression: expression '.' . OBJECTID '(' expression_list_comma_seperated ')'

    OBJECTID  shift, and go to state 107


State 83

   11 feature: OBJECTID ':' TYPEID ASSIGN expression ';' .

    $default  reduce using rule 11 (feature)


State 84

    9 feature: OBJECTID '(' formal_list_comma_seperated ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 108


State 85

   28 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 109


State 86

   52 single_let_construct: error IN .

    $default  reduce using rule 52 (single_let_construct)


State 87

   54 multiple_let_constructs: error ',' .

    $default  reduce using rule 54 (multiple_let_constructs)


State 88

   51 single_let_construct: OBJECTID ':' . TYPEID let_assignment IN expression
   53 multiple_let_constructs: OBJECTID ':' . TYPEID let_assignment ',' let_expression

    TYPEID  shift, and go to state 110


State 89

   29 expression: WHILE expression LOOP . expression POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 111


State 90

   32 expression: CASE expression OF . case_list ESAC

    OBJECTID  shift, and go to state 112

    case_list  go to state 113
    case       go to state 114


State 91

   24 expression: OBJECTID ASSIGN expression .
   25           | expression . '.' OBJECTID '(' expression_list_comma_seperated ')'
   26           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_seperated ')'
   35           | expression . '+' expression
   36           | expression . '-' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   40           | expression . '<' expression
   41           | expression . LE expression
   42           | expression . '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 24 (expression)


State 92

   20 expression_list_comma_seperated: expression_list_comma_seperated . ',' expression
   27 expression: OBJECTID '(' expression_list_comma_seperated . ')'

    ')'  shift, and go to state 115
    ','  shift, and go to state 116


State 93
